Starting on the styling

--- a/LESS/index.less
+++ b/LESS/index.less
@@ -12,15 +12,11 @@ body {
     padding: 0;
 }
 
-body {
-    .flex(none, center, column);
-    background-color: @lambda-times-color-background;
-    color: @lambda-times-color-primary;
-    font-family: 'PT Sans', sans-serif;
-}
+// body {
+//     .flex(none, center, column);
+//     background-color: @lambda-times-color-background;
+//     color: @lambda-times-color-primary;
+//     font-family: 'PT Sans', sans-serif;
+// }
 
-@import './components/TopBar/TopBar';
-@import './components/Header/Header';
-@import './components/Tabs/Tabs';
-@import './components/Cards/Cards';
-@import './components/Carousel/Carousel';
+@import '../components/homepage/home-page.less';
