Reworking my code, got the nav bar working.

--- a/LESS/index.less
+++ b/LESS/index.less
@@ -18,5 +18,6 @@ body {
 //     color: @lambda-times-color-primary;
 //     font-family: 'PT Sans', sans-serif;
 // }
-
-@import '../components/homepage/home-page.less';
+@import './normalize.less';
+@import './home-page.less';
+@import './nav.less';
