--- a/LESS/home-page.less
+++ b/LESS/home-page.less
@@ -3,6 +3,10 @@
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
+body {
+    background-color: lighten(@bookr-bronze, 45%);
+}
+
 #page-wrapper {
     margin-right: auto;
     margin-left: auto;
@@ -18,4 +22,11 @@
 .banner {
     background-image: url(../assets/img/Hero-banner-image.png);
     height: 377px;
+}
+
+.black_line {
+    margin-right: 20px;
+    margin-left: 20px;
+    border-bottom: 1px solid @bookr-grey;
+    height: 25px;
 }
