--- a/LESS/index.less
+++ b/LESS/index.less
@@ -21,3 +21,6 @@ body {
 @import './normalize.less';
 @import './home-page.less';
 @import './nav.less';
+@import './header-text.less';
+@import './below-header.less';
+@import './main-top.less';
