Sending out the first Commit of the day. Fixed the lower tier card formatting

--- a/LESS/index.less
+++ b/LESS/index.less
@@ -24,3 +24,4 @@ body {
 @import './header-text.less';
 @import './below-header.less';
 @import './main-top.less';
+@import './upper-section-2.less';
