--- a/CSS/index.css
+++ b/CSS/index.css
@@ -469,3 +469,9 @@ body {
   align-items: center;
   padding: 25px;
 }
+.parent {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
