--- a/LESS/header-text.less
+++ b/LESS/header-text.less
@@ -1,5 +1,5 @@
 .header-content {
-    background-color: rgba(0, 0, 50.2, .5);
+    // background-color: rgba(0, 0, 50.2, .5);
     color: white;
     margin-top: 95px;
     // margin-left: 20px;
@@ -9,21 +9,13 @@
 
     .h-top {
         width: 50%;
+        margin-top: -20px;
+        margin-bottom: 20px;
 
         h1 {
             font-size: 2.0rem;
+            text-shadow: 2px 2px 4px #00000060;
         }
-    }
-
-    button {
-        background-color: @bookr-orange;
-        border: none;
-        color: white;
-        padding: 10px 20px;
-        font-size: 1.2rem;
-        font-weight: bold;
-        display: inline-block;
-        border-radius: 10px;
     }
 
 }
