--- a/LESS/main-top.less
+++ b/LESS/main-top.less
@@ -4,22 +4,29 @@
     h2 {
         .flex(row, flex-start, center);
         height: 56px;
-        background-color: rgba(40, 40, 187, 0.5);
+        // background-color: rgba(40, 40, 187, 0.5);
+        background-image: linear-gradient(rgba(6, 58, 101, 0.698), rgba(6, 58, 101, 0.144));
         padding-left: 15px;
     }
 
     .img_1 {
         background-image: url(../assets/img/Read-Reviews-Image.png);
+        background-repeat: no-repeat;
+        background-size: cover;
         height: 250px;
     }
 
     .img_2 {
         background-image: url(../assets/img/Write-Reviews-Image.png);
+        background-repeat: no-repeat;
+        background-size: cover;
         height: 250px;
     }
 
     .img_3 {
         background-image: url(../assets/img/Connect-Image.png);
+        background-repeat: no-repeat;
+        background-size: cover;
         height: 250px;
     }
 
@@ -28,5 +35,7 @@
         height: 143px;
         .flex(row, center, center);
         padding: 25px;
+        text-align: center;
+        font-size: 1.2rem;
     }
 }
