--- a/LESS/nav.less
+++ b/LESS/nav.less
@@ -1,9 +1,13 @@
 .nav {
     height: 56px;
-    background-color: @bookr-blue;
+    background-image: linear-gradient(rgba(24, 61, 112, 0.781), rgba(255, 255, 255, 0));
     display: flex;
     width: 100%;
     .flex(row, space-around, center);
+
+    a {
+        text-shadow: 2px 2px 4px #000000;
+    }
 
     .font-logo {
         width: 10%;
