--- a/LESS/below-header.less
+++ b/LESS/below-header.less
@@ -1,18 +1,19 @@
 .below-header {
     .flex(column, center, center);
     text-align: center;
-    border-style: solid;
-    border-width: 1px 0;
-    margin: 25px auto;
-    color: @bookr-grey;
+
+    margin: 25px 18px;
+    color: lighten(@bookr-grey, 15%);
 
     h2 {
-        font-size: 1.4rem;
+        font-size: 1.3rem;
         padding-top: 20px;
+        padding-bottom: 20px;
     }
 
     p {
         font-size: 1.3rem;
         padding-bottom: 20px;
+        padding-top: 10px;
     }
 }
