--- a/LESS/index.less
+++ b/LESS/index.less
@@ -1,5 +1,5 @@
 @import './variables';
-@import './mixins';
+@import './mixins.less';
 @import url('https://fonts.googleapis.com/css?family=PT+Sans:400,400italic,700,700italic,900');
 
 * {
@@ -25,3 +25,5 @@ body {
 @import './below-header.less';
 @import './main-top.less';
 @import './upper-section-2.less';
+@import './call-2-action.less';
+@import './footer.less';
