--- a/LESS/normalize.less
+++ b/LESS/normalize.less
@@ -10,6 +10,14 @@
  * 1. Correct the line height in all browsers.
  * 2. Prevent adjustments of font size after orientation changes in iOS.
  */
+h1,
+h2,
+h3,
+h4,
+p {
+    padding: 0;
+    margin: 0;
+}
 
 html {
     line-height: 1.15;
