--- a/LESS/upper-section-2.less
+++ b/LESS/upper-section-2.less
@@ -1,8 +1,40 @@
-.parent {
-    .flex(row, center, center);
-    // width: 100%;
+.large-card {
+    margin: 50px 25px;
+    padding: 0 15px;
+    border-left: 3px solid @bookr-orange;
+}
 
-    // div {
-    //     width: 50%;
-    // }
+.section-3 {
+    .parent {
+        .flex(row, center, center);
+        
+
+        div {
+
+            h3 {
+                font-size: 1.5rem;
+                padding: 10px;
+
+            }
+
+            h2 {
+                font-size: 1rem;
+                color: @bookr-grey;
+                padding: 0 0 10px 10px;
+                border-bottom: 1px solid lighten(@bookr-grey,15%);
+            }
+
+        }
+
+    }
+
+    p {
+        color: @bookr-blue;
+        padding: 50px 0;
+    }
+
+}
+
+#quick-fix {
+    padding-bottom: 0;
 }
