--- a/LESS/upper-section-2.less
+++ b/LESS/upper-section-2.less
@@ -1,40 +1,34 @@
 .large-card {
-    margin: 50px 25px;
-    padding: 0 15px;
-    border-left: 3px solid @bookr-orange;
+  margin: 50px 25px;
+  padding: 0 15px;
+  border-left: 3px solid @bookr-orange;
 }
 
 .section-3 {
-    .parent {
-        .flex(row, center, center);
-        
+  .parent {
+    .flex(row, center, center);
 
-        div {
+    div {
+      h3 {
+        font-size: 1.5rem;
+        padding: 10px;
+      }
 
-            h3 {
-                font-size: 1.5rem;
-                padding: 10px;
-
-            }
-
-            h2 {
-                font-size: 1rem;
-                color: @bookr-grey;
-                padding: 0 0 10px 10px;
-                border-bottom: 1px solid lighten(@bookr-grey,15%);
-            }
-
-        }
-
+      h2 {
+        font-size: 1rem;
+        color: @bookr-grey;
+        padding: 0 0 10px 10px;
+        border-bottom: 1px solid lighten(@bookr-grey, 15%);
+      }
     }
+  }
 
-    p {
-        color: @bookr-blue;
-        padding: 50px 0;
-    }
-
+  p {
+    color: @bookr-blue;
+    padding: 10px 0 50px 0;
+  }
 }
 
 #quick-fix {
-    padding-bottom: 0;
+  padding-bottom: 0;
 }
