--- a/LESS/home-page.less
+++ b/LESS/home-page.less
@@ -4,7 +4,7 @@
 }
 
 body {
-    background-color: rgb(192, 50, 104);
+    // background-color: rgb(192, 50, 104);
 
 }
 
@@ -12,8 +12,8 @@ body {
     margin-right: auto;
     margin-left: auto;
 
-    min-width: 375px;
-    width: 375px;
+    max-width: 375px;
+
 
     background-color: lighten(@bookr-bronze, 55%);
 }
