--- a/LESS/footer.less
+++ b/LESS/footer.less
@@ -1,7 +1,8 @@
 .social-card {
 
     width: 100%;
-    padding: 35px;
+    padding: 35px 35px 0 35px;
+
 
     .flex(row, space-between, baseline);
 
@@ -9,6 +10,7 @@
 
         img {
             width: 45px;
+            fill: red;
         }
     }
 }
@@ -21,5 +23,7 @@
 
     p {
         font-size: .9rem;
+        text-align: right;
+        color: @bookr-grey;
     }
 }
