--- a/LESS/home-page.less
+++ b/LESS/home-page.less
@@ -33,6 +33,13 @@ body {
 
 }
 
+.black_line_footer {
+    margin: 25px 20px;
+    border-bottom: 2px solid lighten(@bookr-grey, 45%);
+
+}
+
+
 
 button {
     background-color: @bookr-orange;
