--- a/LESS/footer.less
+++ b/LESS/footer.less
@@ -6,6 +6,11 @@
 
     .flex(row, space-between, baseline);
 
+    @media @desktop {
+        .flex(row, space-evenly, baseline);
+
+    }
+
     .social-icons {
 
         img {
