--- a/LESS/nav.less
+++ b/LESS/nav.less
@@ -17,6 +17,11 @@
         text-decoration: none;
         font-size: 1.9rem;
         font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+
+        @media @desktop {
+            margin-left: 0px;
+            margin-right: 10px;
+        }
     }
 
     ul {
@@ -24,6 +29,12 @@
         margin-left: 20px;
         margin-right: 20px;
         width: 80%;
+
+        @media @desktop {
+            width: 50%;
+            margin-right: 0;
+            font-size: 1.2rem;
+        }
 
         a {
             color: white;
