--- a/LESS/home-page.less
+++ b/LESS/home-page.less
@@ -14,6 +14,10 @@ body {
 
     max-width: 375px;
 
+    @media @desktop {
+        max-width: 675px;
+    }
+
 
     background-color: lighten(@bookr-bronze, 55%);
 }
@@ -22,9 +26,23 @@ body {
 
 .banner {
     background-image: url(../assets/img/Hero-banner-image.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
     height: 377px;
-
     background-size: 375px 377px;
+
+    @media @desktop {
+        background-color: #cccccc;
+        /* Used if the image is unavailable */
+        height: 500px;
+        /* You must set a specified height */
+        background-position: center;
+        /* Center the image */
+        background-repeat: no-repeat;
+        /* Do not repeat the image */
+        background-size: cover;
+        /* Resize the background image to cover the entire container */
+    }
 }
 
 .black_line {
@@ -42,6 +60,12 @@ body {
 
 
 button {
+    @media @desktop {
+
+        padding: 10px 40px;
+        font-size: 1.5rem;
+    }
+
     background-color: @bookr-orange;
     border: none;
     color: white;
@@ -55,4 +79,9 @@ button {
 .h2-quickfix_ {
     margin-left: 25px;
     color: @bookr-grey;
+
+    @media @desktop {
+        font-size: 2rem;
+        margin-left: 0;
+    }
 }
