--- a/LESS/upper-section-2.less
+++ b/LESS/upper-section-2.less
@@ -2,16 +2,43 @@
   margin: 50px 25px;
   padding: 0 15px;
   border-left: 3px solid @bookr-orange;
+
+  @media @desktop {
+    border-left: none;
+    .flex(row, space-between, flex-start);
+    margin: 0;
+    width: 100%;
+    margin-top: 45px;
+  }
 }
 
 .section-3 {
+  @media @desktop {
+    width: 31%
+  }
+
   .parent {
+    img {
+      @media @desktop {
+        max-width: 100px;
+        height: auto;
+      }
+    }
+
     .flex(row, center, center);
+
+    @media @desktop {
+      .flex(row, center, flex-start)
+    }
 
     div {
       h3 {
         font-size: 1.5rem;
         padding: 10px;
+
+        @media @desktop {
+          font-size: 1.3rem;
+        }
       }
 
       h2 {
@@ -19,6 +46,10 @@
         color: @bookr-grey;
         padding: 0 0 10px 10px;
         border-bottom: 1px solid lighten(@bookr-grey, 15%);
+
+        @media @desktop {
+          font-size: .7rem;
+        }
       }
     }
   }
@@ -26,6 +57,10 @@
   p {
     color: lighten(@bookr-blue, 15%);
     padding: 10px 0 50px 0;
+
+    @media @desktop {
+      font-size: .9rem;
+    }
   }
 }
 
