--- a/LESS/index.less
+++ b/LESS/index.less
@@ -14,6 +14,7 @@ body {
 
 @import './normalize.less';
 @import './home-page.less';
+@import './about-page.less';
 @import './nav.less';
 @import './header-text.less';
 @import './below-header.less';
