Finished all but the card styling on the about page.

--- a/LESS/about-page.less
+++ b/LESS/about-page.less
@@ -35,4 +35,19 @@
     button {
         display: none;
     }
+
+
+    .circle {
+        border-radius: 175px;
+    }
+
+    .section-3 {
+        width: 350px;
+    }
+
+    .flex-about {
+        display: flex;
+        flex-direction: column;
+
+    }
 }
