--- a/CSS/index.css
+++ b/CSS/index.css
@@ -452,9 +452,55 @@ button {
 }
 .about .section-3 {
   width: 350px;
+  background: #dfdfdf;
+  border-radius: 10px;
+  padding: 30px 30px 0 30px;
+  border-left: 1px solid #ff8533;
+}
+@media (min-width: 900px) {
+  .about .section-3 {
+    width: 600px;
+    display: flex;
+  }
+  .about .section-3 p {
+    font-size: 1.1rem;
+  }
+}
+.about .section-3 .parent {
+  width: 300px;
+}
+@media (min-width: 900px) {
+  .about .section-3 .parent {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 25px;
+  }
+  .about .section-3 .parent img {
+    max-width: 200px;
+    height: auto;
+  }
+  .about .section-3 .parent div {
+    padding-right: 25px;
+  }
+}
+.about .social-card-tabs {
+  width: 100%;
+  padding: 5px 0 0 0;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: baseline;
+}
+.about .social-card-tabs .social-icons img {
+  width: 25px;
+}
+@media (min-width: 900px) {
+  .about .social-card-tabs .social-icons img {
+    width: 20px;
+  }
 }
 .about .tabs .tabs-items {
-  padding-top: 60px;
+  padding-top: 15px;
 }
 .about .tabs .tabs-item {
   display: none;
